tests/toy/neg/001644_mutation.toylang
program a = { while a do var; } .
